@@ -6,7 +6,14 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+February 20 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
+	* Added cans filled with mushroom flesh. 
+	
+February 17 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Dark wizards added 
+	
 February 20 2003 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Gcc 3.2.1 now compiles the game correctly and without warnings
